# awsnewsbot

./: .flake8  .gitignore  app.py  package-lock.json  package.json  pyproject.toml
awsnewsbot/: bot.py  db.py  poster.py  requirements.in  requirements.txt  rss.py
config/: awsnews.yaml
deploy/: bot_stack.py  infra_stack.py
scripts/: put_feed_data.py  twitter_auth_bot.py  update_requirements.sh
tests/: conftest.py  data_aws.xml  test_bot.py  test_db.py  test_poster.py  test_rss.py
